Backup merge from Feature dashboard2 (#55)
* Replace owner as rootPane

* Fix navigations

* Fix typos and update JavaFX version to 21

* Add updated ER diagram with tags entity

* Update db tables for tags and note_tags composite(ManytoMany)

* Remove whitespaces

* Add new Relational Scheme diagram with tags

* Merge Documents folder from main

* Update Entity relationship between notes and tags

* Update Entity relationship between notes and tags

* Update cascading rules for deletion of note and tags

* Update cascading rules for deletion of note and tags

* Remove bold, italics, underline and color features from ToolBar and fix minor bugs

* Bug fixes, remove duplicated codes and fix margins of tags

* Bug fixes including duplicated codes in fxml files and EditController, merge from feature-dashboard2

* Remove alignments feature, fix margins and button sizes

* Fix margins, remove alignment features: feature-dashboard2 (#36)

* Add showAbout for information and dateFormatter for notes creation

* Add dateFormatter method

* Add extra null checks and robust try-catch exceptions

* Add annotation field, fix width of TableColumns, and adjust text labels

* Enable login with Enter keypress and fix stage on logout:
- Add Enter key handling to trigger login action
- Create new Stage for entry pages on logout to maintain fixed-size
  layout

* Create new stage for entry pages on logout to maintain fized-size layout

* Initiate JpaNoteDao object and save annotation update

* Merge handleOpenEditWindow() from feature-dev, remove unused ActionEvent param

* Merge handleOpenEditWindow() from feature-dev, remove unused ActionEvent param

* Implement handleClose() method for MenuItem Close option

* Add handleCreate and handleClose actions for New and Close MenuItem

* Merge delete() method from feature-fdelete

* Fix javaFX version from 24 to 21

* Add handleDelete() onAction in MenuItem Delete

* Implement new session class for Notebook

* Move NoteSession and UserSessio