@@ -2,10 +2,13 @@ package services;
 
 import dao.note.JpaNoteDao;
 import dao.notebook.JpaNoteBookDao;
+import dao.tag.JpaTagDao;
 import entity.*;
-import util.UserSession;
+import session.UserSession;
 
 import java.util.List;
+import java.util.Set;
+
 /**
  * Service layer for Note operations
  */
@@ -13,17 +16,26 @@ public class NoteService {
 
     private final JpaNoteDao noteDao;
     private final JpaNoteBookDao notebookDao;
+    private final JpaTagDao tagDao;
 
     public NoteService() {
         this.noteDao = new JpaNoteDao();
         this.notebookDao = new JpaNoteBookDao();
+        this.tagDao = new JpaTagDao();
+    }
+
+    public NoteService(JpaNoteDao noteDao, JpaNoteBookDao notebookDao, JpaTagDao tagDao) {
+        this.noteDao = noteDao;
+        this.notebookDao = notebookDao;
+        this.tagDao = tagDao;
     }
 
     /**
      * Creates a new note with title, content, and annotation
      */
-    public NoteEntity createNote(String title, String content, String annotation, NoteBookEntity notebookParameter) {
-        if (title == null || title.trim().isEmpty()) {
+    public NoteEntity createNote(String title, String content, String annotation, NoteBookEntity notebookParameter, Set<String> tagNames) {
+
+        if (title == null || title.isBlank()) {
             throw new IllegalArgumentException("Title cannot be empty");
         }
 
@@ -39,7 +51,32 @@ public class NoteService {
         NoteEntity note = new NoteEntity(title.trim(), content != null ? content : "", annotation != null ? annotation: "");
         note.setNotebook(notebookToUse);
 
+        // Shift tag handling logic from controller
+        if (tagNames != null) {
+            for (String tagName : tagNames) {
+                String normalized = tagName.trim().toLowerCase();
+                TagEntity tag = tagDao.findByName(normalized);
+
+                if (tag == null) {
+                    tag = tagDao.save(new TagEntity(normalized));
+                }
+
+                note.addTag(tag);
+            }
+        }
+
         return noteDao.save(note);
+    }
+
+    public NoteBookEntity createNotebook(String name) {
+        UserEntity user = UserSession.getUserInstance().getUser();
+
+        if (name == null || name.isBlank()) {
+            throw new IllegalArgumentException("Notebook name cannot be empty");
+        }
+
+        NoteBookEntity notebook = new NoteBookEntity(name.trim(), user);
+        return notebookDao.save(notebook);
     }
 
     /**
@@ -49,6 +86,7 @@ public class NoteService {
 
         // Find existing notebook for this user
         List<NoteBookEntity> notebooks = notebookDao.findByUser(user);
+
         if (!notebooks.isEmpty()) {
             return notebooks.get(0);
         }
@@ -57,5 +95,9 @@ public class NoteService {
         String notebookName = user.getFirstName() + "'s Notebook";
         NoteBookEntity unsavedNotebook  = new NoteBookEntity(notebookName, user);
         return notebookDao.save(unsavedNotebook);
+    }
+
+    public NoteEntity save(NoteEntity note) {
+        return noteDao.save(note);
     }
 }
